tests/ui/error/builder_does_not_support_unnamed_fields.rs
#[derive(tidy_builder::Builder)]
struct MyStruct(usize, usize);

fn main() {}
